test(load): address review - AutoCloseable wrappers, surfaced errors, encoding
- TimeSeriesDatabaseWrapper implements AutoCloseable; both ITs use try-with-resources
  for the top-level wrappers so connections close even when an assertion fails.
- assertThatPointCountIs now tracks and surfaces the last exception (mirrors
  DatabaseWrapper.assertThatUserCountIs) instead of silently reporting -1.
- assertAggregateExtremes uses isCloseTo(within(1e-9)) and a single polling level;
  aggregate() is now a single query (returns null if no rows) so the retry no longer
  compounds.
- latestTimestamp URL-encodes the tag query parameter.
- Standardised servers.getFirst() over get(0) in the 3-node test.
- Documented that the protocols are not throughput-comparable (line protocol batches
  500/call; SQL sends one INSERT per round-trip, kept to exercise the single-row path).